syntax = "proto3";
package kfangw.flappy.flappy;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "flappy/params.proto";
import "flappy/score.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/kfangw/flappy/x/flappy/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kfangw/flappy/flappy/params";
  }
  // Queries a Score by index.
	rpc Score(QueryGetScoreRequest) returns (QueryGetScoreResponse) {
		option (google.api.http).get = "/kfangw/flappy/flappy/score/{addr}";
	}

	// Queries a list of Score items.
	rpc ScoreAll(QueryAllScoreRequest) returns (QueryAllScoreResponse) {
		option (google.api.http).get = "/kfangw/flappy/flappy/score";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetScoreRequest {
	  string addr = 1;

}

message QueryGetScoreResponse {
	Score score = 1 [(gogoproto.nullable) = false];
}

message QueryAllScoreRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllScoreResponse {
	repeated Score score = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
